--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.box{
+  width: 50px;
+  height: 50px;
+  border: 2px solid rgb(229, 218, 218);
+  margin: 2px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+}
+#container{
+  display: flex;
+  width: 100%;
+  height: 50%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: last baseline;
+  background-color: rgba(192, 147, 220, 0.684);
+  padding: 30vh 0vw;
 }
-
-.App-link {
-  color: #61dafb;
+center{
+  height: 40vh;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button{
+  padding:2vh 3vw;
+  border-radius:1px;
+  background-color: rgb(133, 206, 81);
+  border:2px solid rgb(133, 219, 104);
+}
+p{
+  position: absolute;
+  top:0;
+  left:35%;
+  color: #0c0701; 
+  font-size: 6vw;
+  opacity: 0.3;
 }
